--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,9 +14,8 @@
         android:theme="@style/Theme.Simulator"
         tools:targetApi="31">
         <activity
-            android:name=".DetailActivity"
-            android:exported="true"
-            android:theme="@style/Theme.Simulator.NoActionBar">
+            android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,10 +23,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
-
-        </activity>
+            android:name=".DetailActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Simulator.NoActionBar"/>
     </application>
 
 </manifest>
